hphp/hack/test/typecheck/ref_foreach.php.exp
File "ref_foreach.php", line 11, characters 22-24:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
